--- a/views/ops/upload.ejs
+++ b/views/ops/upload.ejs
@@ -329,7 +329,7 @@
   </div>
 
   <div class="container">
-    <div class="card">
+    <div class="card" id="step1Card">
       <h2>Step 1: Upload PDF</h2>
 
       <form id="uploadForm" enctype="multipart/form-data">
