--- a/views/ops/banks.ejs
+++ b/views/ops/banks.ejs
@@ -264,6 +264,7 @@
     </div>
 
     <div class="ops-tabs">
+      <a class="ops-tab" href="/ops">🧭 Ops Home</a>
       <a class="ops-tab" href="/ops/upload">📤 Upload</a>
       <a class="ops-tab" href="/ops/categories">🏷️ Categories</a>
       <a class="ops-tab active" href="/ops/banks">🏦 Banks</a>
