--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -436,6 +436,7 @@
       <div class="header-title">Mission Control</div>
       <div class="header-nav">
         <a href="/dashboard" class="menu-link">Dashboard</a>
+        <a href="/dashboard/transactions" class="menu-link">Transactions</a>
         <a href="/analytics" class="menu-link active">Analytics</a>
         <a href="/agent" class="menu-link">Agent</a>
         <a href="/investments" class="menu-link">Investments</a>
